more spacing fixes

--- a/src/stylesheets/slices/_reports_carousel.scss
+++ b/src/stylesheets/slices/_reports_carousel.scss
@@ -5,7 +5,7 @@
   align-items: center;
   gap: 20px;
   margin: 0 20px;
-  padding: 0;
+  padding: 0 0 35px 0;
   max-width: 100%;
   overflow: hidden;
   .carousel {
