--- a/src/stylesheets/slices/_text_cards.scss
+++ b/src/stylesheets/slices/_text_cards.scss
@@ -47,6 +47,7 @@
 }
 
 .StaggeredTextCards {
+  padding: 0px;
   .copy-wrap {
     text-align: center;
     margin-bottom: 60px;
